@@ -3,8 +3,8 @@ sourceSets.main{
     resources.srcDirs = ['assets/']
 }
 
-sourceCompatibility = 8
-targetCompatibility = 8
+sourceCompatibility = 17
+targetCompatibility = 17
 
 dependencies{
     implementation "com.github.Anuken.Arc:arc-core:$arcVersion"
@@ -13,6 +13,21 @@ dependencies{
 }
 
 tasks.withType(JavaCompile){
-    sourceCompatibility = 8
-    targetCompatibility = 8
+    sourceCompatibility = 17
+    targetCompatibility = 17
+    options.fork = true
+    options.compilerArgs.addAll([
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-exports", "java.base/sun.reflect.annotation=ALL-UNNAMED"
+    ])
 }
